--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Установка кондиционеров и окон — Курск</title>
+  <title>Установка кондиционеров, окон и вентиляций — Курск и регионы</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Профессиональная установка кондиционеров и замена окон в Курске. Цена от, сроки, виды работ, гарантия. Звонок и WhatsApp.">
+ <meta name="description" content="Профессиональная установка кондиционеров, вентиляций и окон в Курске и соседних регионах. Цена от, сроки, виды работ, гарантия. Звонок и WhatsApp.">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -15,8 +15,8 @@
     <div class="container header-wrap">
       <div class="brand">
         <div>
-          <h1>Установка кондиционеров и окон</h1>
-          <p class="sub">Курск и область — быстро, аккуратно, с гарантией</p>
+          <h1>Установка кондиционеров, окон и вентиляций</h1>
+          <p class="sub">Работаем в Курске, области и соседних регионах</p>
         </div>
       </div>
       <nav class="actions">
@@ -44,19 +44,17 @@
   <div class="container two-col">
     <div>
       <h3>О компании</h3>
-      <p>Мы более <strong>10 лет</strong> занимаемся установкой кондиционеров и окон в Курске и области. 
-      За это время выполнили <strong>свыше 1200 проектов</strong> — от небольших квартир до крупных офисных помещений.</p>
-      <p>Наша миссия — сделать ваш дом или офис комфортным и энергоэффективным. 
-      Мы работаем официально, заключаем договор, предоставляем гарантию и всегда соблюдаем сроки.</p>
-      <p>Каждый проект для нас — это не просто монтаж, а забота о вашем удобстве и доверии. 
-      Мы используем только проверенные материалы и оборудование, а наши мастера проходят регулярное обучение.</p>
+      <p>Мы занимаемся установкой кондиционеров, окон и вентиляций уже <strong>более 10 лет</strong>. За это время реализовали <strong>свыше 1200 проектов</strong> — от уютных квартир до промышленных объектов, включая высотки в Москве и Яковлевский ГОК в Белгородской области.</p>
+      <p>Наша цель — создать комфортный, чистый и энергоэффективный климат в вашем доме или офисе. Мы работаем официально, заключаем договор, соблюдаем сроки и предоставляем гарантию на все виды работ.</p>
+      <p>Для нас монтаж — это не просто техника, а забота о вашем удобстве. Мы используем проверенные материалы, следим за чистотой на объекте и постоянно обучаем мастеров, чтобы вы получали сервис, которому можно доверять.</p>
+
     </div>
     <div>
       <ul class="perks-list">
         <li><strong>10+</strong> лет опыта</li>
         <li><strong>1200+</strong> выполненных заказов</li>
         <li><strong>98%</strong> довольных клиентов</li>
-        <li><strong>3 года</strong> расширенной гарантии на оборудование</li>
+        <li><strong>1 год</strong> расширенной гарантии на оборудование</li>
       </ul>
     </div>
   </div>
@@ -155,30 +153,68 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="container">
+    <h3>Наши работы</h3>
+    <div class="gallery works-gallery">
+      <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Работа 1">
+      <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_dc138daf.jpg" alt="Работа 3">
+      <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_f1c08bdb.jpg" alt="Работа 3">
+      <img src="media/Изображение WhatsApp 2025-10-01 в 19.20.57_1a68d149.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0002.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0003.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0004.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0006.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0008.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0009.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0010.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0014.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0005.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0007.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0011.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0012.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0013.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0015.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0016.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0017.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0023.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0024.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0025.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0026.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0027.jpg" alt="Работа 40">
+      <img src="media/IMG-20251001-WA0028.jpg" alt="Работа 3">
 
-    <section class="section alt">
-      <div class="container">
-        <h3>Отзывы клиентов</h3>
-       <div class="reviews">
-  <article class="review">
-    <img src="media/490d38e33c65dfe7f1df16c83a446e45.png" alt="Анна" class="review-photo">
-    <p>«Установили кондиционер за один день, всё аккуратно и без пыли. Очень довольна работой!»</p>
-    <span>— Анна, Курск</span>
-  </article>
+      <img src="media/IMG-20251001-WA0030.jpg" alt="Работа 3">
+      <img src="media/IMG-20251001-WA0031.jpg" alt="Работа 3">
+    </div>
+  </div>
+</section>
 
-  <article class="review">
-    <img src="media/490d38e33c65dfe7f1df16c83a446e45.png" alt="Сергей" class="review-photo">
-    <p>«Меняли окна в квартире. Приехали вовремя, сделали быстро, мусор за собой убрали. Рекомендую!»</p>
-    <span>— Сергей, Курчатов</span>
-  </article>
+  <section class="section alt">
+  <div class="container">
+    <h3>Отзывы клиентов</h3>
+    <div class="reviews">
 
-  <article class="review">
-    <img src="media/490d38e33c65dfe7f1df16c83a446e45.png" alt="Мария" class="review-photo">
-    <p>«Заказывали замену окон в частном доме. Всё сделали качественно, тепло держится отлично. Спасибо!»</p>
-    <span>— Мария, Курск</span>
-  </article>
-</div>
+      <article class="review">
+        <img src="media/490d38e33c65dfe7f1df16c83a446e45.png" alt="Анна" class="review-photo">
+        <p>«Устанавливали кондиционер летом, в самую жару. Мастера приехали вовремя, всё сделали за несколько часов, аккуратно и даже пыль почти не осталось. Теперь в квартире прохладно и уютно. Спасибо за внимательное отношение!»</p>
+        <span>— Анна, Курск</span>
+      </article>
 
+      <article class="review">
+        <img src="media/490d38e33c65dfe7f1df16c83a446e45.png" alt="Сергей" class="review-photo">
+        <p>«Меняли старые деревянные окна на пластиковые. Работали два дня: сначала замеры, потом монтаж. Ребята аккуратно вынесли старые рамы, всё заделали и сразу поставили новые подоконники. В квартире стало теплее и тише, а мусор за собой полностью убрали.»</p>
+        <span>— Сергей, Курчатов</span>
+      </article>
+
+      <article class="review">
+        <img src="media/Изображение WhatsApp 2025-10-01 в 19.39.38_76d0a1dd.jpg" alt="Мария" class="review-photo">
+        <p>«В частном доме меняли окна и устанавливали вентиляцию. Работы заняли два дня, всё сделали аккуратно, швы хорошо загерметизировали. После установки стало заметно теплее, воздух перестал задерживватся в комнатах со всеми запахами теперь стало приятнее дышать. Очень довольны результатом!»</p>
+        <span>— Мария, Курск</span>
+      </article>
+    </div>
+  </div>
+</section>
       </div>
     </section>
   </main>
@@ -193,7 +229,7 @@
         <p><strong>WhatsApp:</strong> 
           <a href="https://wa.me/79510777080" target="_blank" rel="noopener">Написать</a>
         </p>
-        <p><strong>Зона обслуживания:</strong> Курск и Курская область</p>
+        <p><strong>Зона обслуживания:</strong> Курск, Курская область и соседние регионы</p>
       </div>
       <p class="copyright">© 2025 Установка кондиционеров и окон. Все права защищены.</p>
     </div>
