--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
       </div>
       <nav class="actions">
-        <p><strong>Телефон:</strong> <a class="phone-highlight" href="tel:+79510777080">+7 951-077-70-80</a></p>
-        <a class="btn ghost" href="https://wa.me/79510777080" target="_blank" rel="noopener">WhatsApp</a>
+        <p><strong>Телефон:</strong> <a class="phone-highlight" href="tel:+7 908 121-53-97">+7 908 121-53-97</a></p>
+        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener">WhatsApp</a>
       </nav>
     </div>
   </header>
@@ -73,8 +73,8 @@
             <li>Работаем официально, по договору</li>
           </ul>
           <div class="cta">
-            <a class="btn call" href="tel:+79510777080">Позвонить</a>
-            <a class="btn ghost" href="https://wa.me/79510777080" target="_blank" rel="noopener">Написать в WhatsApp</a>
+            <a class="btn call" href="tel:+7 908 121-53-97">Позвонить</a>
+            <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener">Написать в WhatsApp</a>
           </div>
         </div>
         <div class="gallery">
@@ -98,8 +98,8 @@
             <li>Стальные — для спецпроектов</li>
           </ul>
           <div class="cta">
-            <a class="btn call" href="tel:+79510777080">Позвонить</a>
-            <a class="btn ghost" href="https://wa.me/79510777080" target="_blank" rel="noopener">Написать в WhatsApp</a>
+            <a class="btn call" href="tel:+7 908 121-53-97">Позвонить</a>
+            <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener">Написать в WhatsApp</a>
           </div>
         </div>
         <div class="gallery">
@@ -123,8 +123,8 @@
         <li>Гарантия на работы 12 месяцев</li>
       </ul>
       <div class="cta">
-        <a class="btn call" href="tel:+79510777080">Позвонить</a>
-        <a class="btn ghost" href="https://wa.me/79510777080" target="_blank" rel="noopener">Написать в WhatsApp</a>
+        <a class="btn call" href="tel:+7 908 121-53-97">Позвонить</a>
+        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener">Написать в WhatsApp</a>
       </div>
     </div>
     <div class="gallery">
@@ -196,20 +196,20 @@
     <div class="reviews">
 
       <article class="review">
-        <img src="media/490d38e33c65dfe7f1df16c83a446e45.png" alt="Анна" class="review-photo">
+        <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_46089dad.jpg" alt="Анна" class="review-photo">
         <p>«Устанавливали кондиционер летом, в самую жару. Мастера приехали вовремя, всё сделали за несколько часов, аккуратно и даже пыль почти не осталось. Теперь в квартире прохладно и уютно. Спасибо за внимательное отношение!»</p>
-        <span>— Анна, Курск</span>
+        <span>— Анна, Москва</span>
       </article>
 
       <article class="review">
-        <img src="media/490d38e33c65dfe7f1df16c83a446e45.png" alt="Сергей" class="review-photo">
+        <img src="media/794_original.jpg" alt="Сергей" class="review-photo">
         <p>«Меняли старые деревянные окна на пластиковые. Работали два дня: сначала замеры, потом монтаж. Ребята аккуратно вынесли старые рамы, всё заделали и сразу поставили новые подоконники. В квартире стало теплее и тише, а мусор за собой полностью убрали.»</p>
         <span>— Сергей, Курчатов</span>
       </article>
 
       <article class="review">
         <img src="media/Изображение WhatsApp 2025-10-01 в 19.39.38_76d0a1dd.jpg" alt="Мария" class="review-photo">
-        <p>«В частном доме меняли окна и устанавливали вентиляцию. Работы заняли два дня, всё сделали аккуратно, швы хорошо загерметизировали. После установки стало заметно теплее, воздух перестал задерживватся в комнатах со всеми запахами теперь стало приятнее дышать. Очень довольны результатом!»</p>
+        <p>«В помещении меняли окна и устанавливали вентиляцию. Работы заняли два дня, всё сделали аккуратно, швы хорошо загерметизировали. После установки стало заметно теплее, воздух перестал задерживватся в комнатах со всеми запахами теперь стало приятнее дышать. Очень довольны результатом!»</p>
         <span>— Мария, Курск</span>
       </article>
     </div>
@@ -224,10 +224,10 @@
     <div class="container footer-wrap">
       <div class="contacts">
         <p><strong>Телефон:</strong> 
-          <a class="phone-highlight" href="tel:+79510777080">+7 951-077-70-80</a>
+          <a class="phone-highlight" href="tel:+7 908 121-53-97">+7 908 121-53-97</a>
         </p>
         <p><strong>WhatsApp:</strong> 
-          <a href="https://wa.me/79510777080" target="_blank" rel="noopener">Написать</a>
+          <a href="https://wa.me/79081215397" target="_blank" rel="noopener">Написать</a>
         </p>
         <p><strong>Зона обслуживания:</strong> Курск, Курская область и соседние регионы</p>
       </div>
