--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
     </div>
   </div>
 </section>
-
-
 <!-- Прайс-лист -->
 <section class="section alt">
   <div class="container">
@@ -41,7 +39,7 @@
       <div class="price-item">
         <div class="icon">❄️</div>
         <h4>Установка кондиционеров</h4>
-        <p class="price">от <strong>10 000 ₽</strong></p>
+        <p class="price">от <strong><span id="ac-price">10000</span> ₽</strong></p>
         <p class="note">Срок: 2–5 часов</p>
       </div>
 
@@ -49,7 +47,7 @@
       <div class="price-item">
         <div class="icon">🌬️</div>
         <h4>Монтаж вентиляции</h4>
-        <p class="price">от <strong>9 999 ₽</strong></p>
+        <p class="price">от <strong><span id="vent-price">9999</span> ₽</strong></p>
         <p class="note">Срок: 1–3 дня</p>
       </div>
 
@@ -57,7 +55,7 @@
       <div class="price-item secondary">
         <div class="icon">🪟</div>
         <h4>Установка окон <span class="tag">доп. услуга</span></h4>
-        <p class="price">от <strong>6 666 ₽</strong></p>
+        <p class="price">от <strong><span id="window-price-2">6666</span> ₽</strong></p>
         <p class="note">Срок: 1–2 дня</p>
       </div>
 
@@ -73,6 +71,7 @@
     </div>
   </div>
 </section>
+
 
 <section id="about" class="section alt">
   <div class="container">
