--- a/index.html
+++ b/index.html
@@ -186,7 +186,10 @@
 <section class="section">
   <div class="container two-col">
     <div>
-      <h3>Установка окон</h3>
+      <h3>
+        Установка окон 
+        <span class="tag">доп. услуга</span>
+      </h3>
       <p class="price">Цена от: <strong><span id="window-price">6666</span> ₽</strong></p>
       <p class="term">Срок: 1–2 дня</p>
       <p>Устанавливаем пластиковые, алюминиевые и стальные окна. Демонтаж старых конструкций, утепление и герметизация швов.</p>
