--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!doctype html>
 <html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Кондиционеры и вентиляция</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <header class="site-header">
   <div class="container header-wrap">
     <div class="brand">
@@ -12,26 +19,24 @@
       <a href="#works">Наши работы</a>
     </nav>
   </div>
-    <link rel="stylesheet" href="style.css">
 </header>
-<body>
-<main>
 
+
+<main>
 <section class="hero">
   <div class="container hero-grid">
-    <div class="hero-text">
+    <div class="hero-text overlay">
       <h1>Кондиционеры и вентиляция<br>в Курске и регионах</h1>
       <p class="subtitle">Более 10 лет создаём комфортный климат в квартирах, домах, офисах и на промышленных объектах.</p>
     </div>
   </div>
 </section>
-<!-- Прайс-лист -->
+
 <section class="section alt">
   <div class="container">
     <h3>Прайс‑лист</h3>
     <div class="price-list">
 
-      <!-- Кондиционеры -->
       <div class="price-item">
         <div class="icon">❄️</div>
         <h4>Установка кондиционеров</h4>
@@ -39,7 +44,6 @@
         <p class="note">Срок: 2–5 часов</p>
       </div>
 
-      <!-- Вентиляция -->
       <div class="price-item">
         <div class="icon">🌬️</div>
         <h4>Монтаж вентиляции</h4>
@@ -47,7 +51,6 @@
         <p class="note">Срок: 1–3 дня</p>
       </div>
 
-      <!-- Окна (доп. услуга) -->
       <div class="price-item secondary">
         <div class="icon">🪟</div>
         <h4>Установка окон <span class="tag">доп. услуга</span></h4>
@@ -56,11 +59,7 @@
       </div>
 
     </div>
-
-    <!-- Сноска -->
     <p class="footnote">* Окончательная цена зависит от типа работы и условий монтажа — уточняйте по телефону</p>
-
-    <!-- Общие кнопки -->
     <div class="cta global-cta">
       <a class="btn call" href="tel:+79081215397">Позвонить</a>
       <a class="btn ghost" href="https://wa.me/79081215397" target="_blank">Написать в WhatsApp</a>
@@ -206,10 +205,13 @@
   </div>
 </section>
 
-  <!-- Наши работы -->
   <section id="works" class="section">
     <div class="container">
       <h3>Наши работы</h3>
+     <div class="works-cover mobile-only">
+      <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Альбом работ">
+      <p>Смотреть все работы</p>
+    </div>
       <div class="works-gallery">
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Работа 1"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_46089dad.jpg" alt="Работа 2"></div>
@@ -234,12 +236,16 @@
     </div>
   
   </section>
-<!-- Лайтбокс -->
 <div class="lightbox" id="lightbox">
+  <span class="close">&times;</span>
   <img src="" alt="Просмотр работы">
+  <div class="lightbox-nav">
+    <button id="prev">‹</button>
+    <button id="next">›</button>
+  </div>
 </div>
 
-  <!-- Отзывы -->
+
   <section class="section alt">
     <div class="container">
       <h3>Отзывы клиентов</h3>
@@ -259,33 +265,29 @@
       </div>
     </div>
   </section>
+  </main>
+
 <footer class="site-footer">
   <div class="container footer-wrap">
-
     <div class="footer-brand">
       <h4>Кондиционеры и вентиляция</h4>
       <p>Курск и регионы</p>
     </div>
-
     <div class="contacts">
-      <p><strong>Телефон:</strong> <a href="tel:+79081215397">+7 908 121‑53‑97</a></p>
+      <p><strong>Телефон:</strong> <a href="tel:+79081215397">+7 908 121-53-97</a></p>
       <p><strong>WhatsApp:</strong> <a href="https://wa.me/79081215397" target="_blank">Написать</a></p>
     </div>
-
     <div class="footer-nav">
       <a href="#about">О компании</a>
       <a href="#services">Услуги</a>
       <a href="#works">Наши работы</a>
     </div>
-
   </div>
-
   <div class="container">
     <p class="copy">© 2025 Кондиционеры и вентиляция. Все права защищены.</p>
   </div>
 </footer>
 
-</main>
 <script src="script.js"></script>
 </body>
 </html>
