--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Кондиционеры и вентиляция</title>
+  <title>Кондиционеры вентиляции и пластиковые окна</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
