--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="site-header">
   <div class="container header-wrap">
     <div class="brand">
-      <h1>Кондиционеры и вентиляция</h1>
+      <h1>Кондиционеры вентиляции и пластиковые окна</h1>
       <p class="sub">Курск и регионы</p>
     </div>
     <nav class="nav">
