--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <section class="hero">
   <div class="container hero-grid">
     <div class="hero-text overlay">
-      <h1>Кондиционеры и вентиляция<br>в Курске и регионах</h1>
+      <h1>Кондиционеры вентиляции и пластиковые окна<br>в Курске и регионах</h1>
       <p class="subtitle">Более 10 лет создаём комфортный климат в квартирах, домах, офисах и на промышленных объектах.</p>
     </div>
   </div>
