--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Кондиционеры вентиляции и пластиковые окна</title>
+  <title>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="site-header">
   <div class="container header-wrap">
     <div class="brand">
-      <h1>Кондиционеры вентиляции и пластиковые окна</h1>
+      <h1>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна</h1>
       <p class="sub">Курск и регионы</p>
     </div>
     <nav class="nav">
@@ -26,7 +26,7 @@
 <section class="hero">
   <div class="container hero-grid">
     <div class="hero-text overlay">
-      <h1>Кондиционеры вентиляции и пластиковые окна<br>в Курске и регионах</h1>
+      <h1>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна<br>в Курске и регионах</h1>
       <p class="subtitle">Более 10 лет создаём комфортный климат в квартирах, домах, офисах и на промышленных объектах.</p>
     </div>
   </div>
