--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 <footer class="site-footer">
   <div class="container footer-wrap">
     <div class="footer-brand">
-      <h4>Кондиционеры и вентиляция</h4>
+      <h4>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна</h4>
       <p>Курск и регионы</p>
     </div>
     <div class="contacts">
