--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   </div>
 </header>
 
-
 <main>
 <section class="hero">
   <div class="container hero-grid">
@@ -284,7 +283,7 @@
     </div>
   </div>
   <div class="container">
-    <p class="copy">© 2025 Кондиционеры и вентиляция. Все права защищены.</p>
+    <p class="copy">© 2025 AirMaster. Все права защищены.</p>
   </div>
 </footer>
 
