--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="media/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="media/favicon.ico" type="image/png">
+  <link rel="apple-touch-icon" href="media/favicon.ico">
+
 </head>
 <body>
 <header class="site-header">
@@ -207,31 +211,73 @@
   <section id="works" class="section">
     <div class="container">
       <h3>Наши работы</h3>
-     <div class="works-cover mobile-only">
+     <div class="works-cover">
       <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Альбом работ">
       <p>Смотреть все работы</p>
     </div>
       <div class="works-gallery">
-        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Работа 1"></div>
-        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_46089dad.jpg" alt="Работа 2"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.17_6fc70d16.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.17_8174c73f.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.17_b4683975.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.18_377043f9.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.18_f3aac9e7.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.18_f3b07323.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.19_51e0ae76.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_46089dad.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_dc138daf.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.17.15_f1c08bdb.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.20.57_1a68d149.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.20.59_c81873fd.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.21.00_1a09091c.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.21.00_6eac8ae2.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.21.01_b3d0cc37.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.21.02_96bc7137.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.39.38_76d0a1dd.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.08.02_2d3f667a.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.08.02_ca14f058.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.10.17_8b8d60d5.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.10.17_e1e93fc4.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.10.18_9471e4b9.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.10.18_eddf8827.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.14.14_f521e71e.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.15.06_45eca968.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.18.16_fefccda0.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-10 в 16.23.36_875c5ab3.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0002.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0003.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0004.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0005.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0006.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0007.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0008.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0009.jpg" alt="Работа 3"></div>
-        <div class="work-item"><img src="media/IMG-20251001-WA0013.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0010.jpg" alt="Работа 3"></div>
-        <div class="work-item"><img src="media/IMG-20251001-WA0012.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0011.jpg" alt="Работа 3"></div>
-        <div class="work-item"><img src="media/IMG-20251001-WA0007.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0012.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0013.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0014.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0015.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0016.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0017.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0023.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0024.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0025.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0026.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0027.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0028.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0029.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0030.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251001-WA0031.jpg" alt="Работа 3"></div>
       </div>
+      <div class="lightbox">
+  <span class="close">&times;</span>
+  <img src="" alt="Просмотр">
+  <div class="lightbox-caption"></div>
+  <div class="lightbox-nav">
+    <button id="prev">‹</button>
+    <button id="next">›</button>
+  </div>
     </div>
   
   </section>
