--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна</title>
+  <title>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые и мягкие окна</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="media/favicon.ico" type="image/x-icon">
   <link rel="icon" href="media/favicon.ico" type="image/png">
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <!-- Yandex.Metrika counter -->
+<!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function(m,e,t,r,i,k,a){
         m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -24,10 +24,11 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/104593805" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+
 <header class="site-header">
   <div class="container header-wrap">
     <div class="brand">
-      <h1>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна</h1>
+      <h1>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые и мягкие окна</h1>
       <p class="sub">Курск и регионы</p>
     </div>
     <nav class="nav">
@@ -42,7 +43,7 @@
 <section class="hero">
   <div class="container hero-grid">
     <div class="hero-text overlay">
-      <h1>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна<br>в Курске и регионах</h1>
+      <h1>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые и мягкие окна<br>в Курске и регионах</h1>
       <p class="subtitle">Более 10 лет создаём комфортный климат в квартирах, домах, офисах и на промышленных объектах.</p>
     </div>
   </div>
@@ -69,7 +70,7 @@
 
       <div class="price-item secondary">
         <div class="icon">🪟</div>
-        <h4>Установка окон <span class="tag">доп. услуга</span></h4>
+        <h4>Установка пластиковых и мягких окон <span class="tag">доп. услуга</span></h4>
         <p class="price">от <strong><span id="window-price-2">6666</span> ₽</strong></p>
         <p class="note">Срок: 1–2 дня</p>
       </div>
@@ -78,7 +79,7 @@
     <p class="footnote">* Окончательная цена зависит от типа работы и условий монтажа — уточняйте по телефону</p>
     <div class="cta global-cta">
       <a class="btn call" href="tel:+79081215397">Позвонить</a>
-      <a class="btn ghost" href="https://wa.me/79081215397" target="_blank">Написать в WhatsApp</a>
+      <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener noreferrer">Написать в WhatsApp</a>
     </div>
   </div>
 </section>
@@ -160,7 +161,7 @@
 
       <div class="cta left">
         <a class="btn call" href="tel:+79081215397">Позвонить</a>
-        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank">WhatsApp</a>
+        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener noreferrer">WhatsApp</a>
       </div>
     </div>
 
@@ -187,7 +188,7 @@
 
       <div class="cta left">
         <a class="btn call" href="tel:+79081215397">Позвонить</a>
-        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank">WhatsApp</a>
+        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener noreferrer">WhatsApp</a>
       </div>
     </div>
 
@@ -202,7 +203,7 @@
   <div class="container two-col">
     <div>
       <h3>
-        Установка окон 
+        Установка пластиковых и мягких окон 
         <span class="tag">доп. услуга</span>
       </h3>
       <p class="price">Цена от: <strong><span id="window-price">6666</span> ₽</strong></p>
@@ -211,7 +212,7 @@
 
       <div class="cta left">
         <a class="btn call" href="tel:+79081215397">Позвонить</a>
-        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank">WhatsApp</a>
+        <a class="btn ghost" href="https://wa.me/79081215397" target="_blank" rel="noopener noreferrer">WhatsApp</a>
       </div>
     </div>
 
@@ -292,17 +293,6 @@
     <button id="next">›</button>
   </div>
     </div>
-  
-  </section>
-<div class="lightbox" id="lightbox">
-  <span class="close">&times;</span>
-  <img src="" alt="Просмотр работы">
-  <div class="lightbox-nav">
-    <button id="prev">‹</button>
-    <button id="next">›</button>
-  </div>
-</div>
-
 
   <section class="section alt">
     <div class="container">
@@ -328,12 +318,12 @@
 <footer class="site-footer">
   <div class="container footer-wrap">
     <div class="footer-brand">
-      <h4>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые окна</h4>
+      <h4>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые и мягкие окна</h4>
       <p>Курск и регионы</p>
     </div>
     <div class="contacts">
       <p><strong>Телефон:</strong> <a href="tel:+79081215397">+7 908 121-53-97</a></p>
-      <p><strong>WhatsApp:</strong> <a href="https://wa.me/79081215397" target="_blank">Написать</a></p>
+      <p><strong>WhatsApp:</strong> <a href="https://wa.me/79081215397" target="_blank" rel="noopener noreferrer">Написать</a></p>
     </div>
     <div class="footer-nav">
       <a href="#about">О компании</a>
