--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые и мягкие окна</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Обслуживание кондиционеров, диагностика вентиляции, промывка теплообменников, чистка систем охлаждения и вентиляции. Лучшие цены, быстрый выезд и гарантия.">
+  <meta name="keywords" content="обслуживание кондиционеров, чистка кондиционеров, ремонт кондиционеров, обслуживание вентиляции, чистка вентиляции, сервис кондиционеров, вентиляция обслуживание">
+  <meta name="author" content="Сервис по обслуживанию кондиционеров">
+
+  <!-- OpenGraph -->
+  <meta property="og:title" content="Обслуживание и чистка кондиционеров | Лучшая цена">
+  <meta property="og:description" content="Профессиональная чистка и обслуживание кондиционеров и вентиляции. Гарантия. Быстрый выезд.">
+  <meta property="og:image" content="https://example.com/media/hero.png">
+  <meta property="og:type" content="website">
+
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="media/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="media/favicon.ico" type="image/png">
   <link rel="apple-touch-icon" href="media/favicon.ico">
-
 </head>
 <body>
 <!-- Yandex.Metrika counter -->
@@ -28,7 +38,7 @@
 <header class="site-header">
   <div class="container header-wrap">
     <div class="brand">
-      <h1>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые и мягкие окна</h1>
+      <h2>Кондиционеры, вентиляция выполнения работ любой сложности, пластиковые и мягкие окна</h2>
       <p class="sub">Курск и регионы</p>
     </div>
     <nav class="nav">
@@ -51,25 +61,25 @@
 
 <section class="section alt">
   <div class="container">
-    <h3>Прайс‑лист</h3>
+    <h3>Прайс-лист</h3>
     <div class="price-list">
 
       <div class="price-item">
-        <div class="icon">❄️</div>
+        <div class="icon" aria-hidden="true">❄️</div>
         <h4>Установка кондиционеров</h4>
         <p class="price">от <strong><span id="ac-price">10000</span> ₽</strong></p>
         <p class="note">Срок: 2–5 часов</p>
       </div>
 
       <div class="price-item">
-        <div class="icon">🌬️</div>
+        <div class="icon" aria-hidden="true">🌬️</div>
         <h4>Монтаж вентиляции</h4>
         <p class="price">от <strong><span id="vent-price">9999</span> ₽</strong></p>
         <p class="note">Срок: 1–3 дня</p>
       </div>
 
       <div class="price-item secondary">
-        <div class="icon">🪟</div>
+        <div class="icon" aria-hidden="true">🪟</div>
         <h4>Установка пластиковых и мягких окон <span class="tag">доп. услуга</span></h4>
         <p class="price">от <strong><span id="window-price-2">6666</span> ₽</strong></p>
         <p class="note">Срок: 1–2 дня</p>
@@ -84,7 +94,6 @@
   </div>
 </section>
 
-
 <section id="about" class="section alt">
   <div class="container">
     <p><strong>Мы специализируемся на установке кондиционеров и вентиляционных систем</strong> уже более 10 лет. За это время реализовали свыше <strong>1200 проектов</strong> — от уютных квартир и офисов до промышленных объектов, включая высотные здания в Москве и Яковлевский ГОК в Белгородской области.</p>
@@ -95,49 +104,51 @@
 
     <p class="note">Дополнительно мы выполняем установку окон — как сопутствующую услугу для комплексных проектов.</p>
   </div>
-    <section class="section alt">
+</section>
+
+<section class="section alt">
   <div class="container">
     <h3>Почему выбирают нас</h3>
     <div class="facts-grid">
 
       <div class="fact">
-        <div class="fact-icon">⏳</div>
+        <div class="fact-icon" aria-hidden="true">⏳</div>
         <h4>10+ лет опыта</h4>
         <p>Мы работаем на рынке более десяти лет и знаем все нюансы монтажа.</p>
       </div>
 
       <div class="fact">
-        <div class="fact-icon">🏗️</div>
+        <div class="fact-icon" aria-hidden="true">🏗️</div>
         <h4>1200+ проектов</h4>
         <p>От квартир и офисов до промышленных объектов.</p>
       </div>
 
       <div class="fact">
-        <div class="fact-icon">😊</div>
+        <div class="fact-icon" aria-hidden="true">😊</div>
         <h4>98% довольных клиентов</h4>
         <p>Большинство заказчиков рекомендуют нас друзьям и коллегам.</p>
       </div>
 
       <div class="fact">
-        <div class="fact-icon">🛡️</div>
+        <div class="fact-icon" aria-hidden="true">🛡️</div>
         <h4>1 год гарантии</h4>
         <p>Расширенная гарантия на оборудование и монтажные работы.</p>
       </div>
 
       <div class="fact">
-        <div class="fact-icon">📍</div>
+        <div class="fact-icon" aria-hidden="true">📍</div>
         <h4>Курск и регионы</h4>
         <p>Работаем в Курске, области и соседних регионах.</p>
       </div>
 
-    <div class="fact">
-      <div class="fact-icon">🏭</div>
-      <h4>Опыт на крупных объектах</h4>  
-      <p>Выполняли монтаж на <strong>Яковлевском ГОКе</strong></p>
-    </div>
+      <div class="fact">
+        <div class="fact-icon" aria-hidden="true">🏭</div>
+        <h4>Опыт на крупных объектах</h4>
+        <p>Выполняли монтаж на <strong>Яковлевском ГОКе</strong></p>
+      </div>
 
       <div class="fact">
-        <div class="fact-icon">✅</div>
+        <div class="fact-icon" aria-hidden="true">✅</div>
         <h4>Официально и честно</h4>
         <p>Работаем по договору, соблюдаем сроки и предоставляем гарантию.</p>
       </div>
@@ -152,7 +163,7 @@
       <h3>Установка кондиционеров</h3>
       <p class="price">Цена от: <strong><span id="ac-price-2">10000</span> ₽</strong></p>
       <p class="term">Срок: 2–5 часов</p>
-      <p>Мы устанавливаем настенные сплит‑системы, инверторные модели и мульти‑сплит. В стоимость входит монтаж блоков, трасса до 3 м, дренаж, пусконаладка и консультация.</p>
+      <p>Мы устанавливаем настенные сплит-системы, инверторные модели и мульти-сплит. В стоимость входит монтаж блоков, трасса до 3 м, дренаж, пусконаладка и консультация.</p>
       <ul class="list">
         <li>Аккуратная прокладка трассы</li>
         <li>Гарантия 12 месяцев</li>
@@ -166,8 +177,8 @@
     </div>
 
     <div class="gallery">
-      <img src="media/image.webp" alt="Монтаж кондиционера">
-      <img src="media/IMG-20251001-WA0005.jpg" alt="Внешний блок">
+      <img src="media/image.webp" alt="Монтаж кондиционера" loading="lazy">
+      <img src="media/IMG-20251001-WA0005.jpg" alt="Внешний блок" loading="lazy">
     </div>
   </div>
 </section>
@@ -193,8 +204,8 @@
     </div>
 
     <div class="gallery">
-      <img src="media/diploma.webp" alt="Воздуховоды">
-      <img src="media/Estestvennaya-ventil.jpg" alt="Вентиляционная решётка">
+      <img src="media/diploma.webp" alt="Воздуховоды" loading="lazy">
+      <img src="media/Estestvennaya-ventil.jpg" alt="Вентиляционная решётка" loading="lazy">
     </div>
   </div>
 </section>
@@ -202,10 +213,7 @@
 <section class="section">
   <div class="container two-col">
     <div>
-      <h3>
-        Установка пластиковых и мягких окон 
-        <span class="tag">доп. услуга</span>
-      </h3>
+      <h3>Установка пластиковых и мягких окон <span class="tag">доп. услуга</span></h3>
       <p class="price">Цена от: <strong><span id="window-price">6666</span> ₽</strong></p>
       <p class="term">Срок: 1–2 дня</p>
       <p>Устанавливаем пластиковые, алюминиевые и стальные окна. Демонтаж старых конструкций, утепление и герметизация швов.</p>
@@ -217,20 +225,22 @@
     </div>
 
     <div class="gallery">
-      <img src="media/i.webp" alt="Монтаж окна">
+      <img src="media/i.webp" alt="Монтаж окна" loading="lazy">
     </div>
   </div>
 </section>
 
-  <section id="works" class="section">
-    <div class="container">
-      <h3>Наши работы</h3>
-     <div class="works-cover">
-      <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Альбом работ">
+<section id="works" class="section">
+  <div class="container">
+    <h3>Наши работы</h3>
+
+    <div class="works-cover" role="button" tabindex="0" aria-label="Открыть галерею">
+      <img src="media/Изображение WhatsApp 2025-10-01 в 19.17.14_f67d4248.jpg" alt="Альбом работ" loading="lazy">
       <p>Смотреть все работы</p>
     </div>
-      <div class="works-gallery">
-        <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.17_6fc70d16.jpg" alt="Работа 3"></div>
+
+    <div class="works-gallery">
+     <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.17_6fc70d16.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.17_8174c73f.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.17_b4683975.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/Изображение WhatsApp 2025-10-01 в 19.15.18_377043f9.jpg" alt="Работа 3"></div>
@@ -283,37 +293,84 @@
         <div class="work-item"><img src="media/IMG-20251001-WA0029.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0030.jpg" alt="Работа 3"></div>
         <div class="work-item"><img src="media/IMG-20251001-WA0031.jpg" alt="Работа 3"></div>
-      </div>
-      <div class="lightbox">
-  <span class="close">&times;</span>
-  <img src="" alt="Просмотр">
-  <div class="lightbox-caption"></div>
-  <div class="lightbox-nav">
-    <button id="prev">‹</button>
-    <button id="next">›</button>
-  </div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0001.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0002.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0003.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0004.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0005.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0006.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0007.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0008.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0009.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0010.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0011.jpg" alt="Работа 3"></div>
+        <div class="work-item"><img src="media/IMG-20251125-WA0012.jpg" alt="Работа 3"></div>
     </div>
 
-  <section class="section alt">
-    <div class="container">
-      <h3>Отзывы клиентов</h3>
-      <div class="reviews">
-        <article class="review">
-          <p>«Устанавливали кондиционер летом, всё сделали быстро и аккуратно. Теперь дома прохладно и уютно.»</p>
-          <span>— Анна, Москва</span>
-        </article>
-        <article class="review">
-          <p>«Меняли старые окна на пластиковые. Работали чисто, вынесли мусор, стало теплее и тише.»</p>
-          <span>— Сергей, Курчатов</span>
-        </article>
-        <article class="review">
-          <p>«Устанавливали окна и вентиляцию. Всё сделали аккуратно, воздух стал свежим, стало приятнее дышать.»</p>
-          <span>— Мария, Курск</span>
-        </article>
+    <div class="lightbox" aria-hidden="true">
+      <span class="close" role="button" aria-label="Закрыть">&times;</span>
+      <img src="" alt="Просмотр">
+      <div class="lightbox-caption"></div>
+      <div class="lightbox-nav">
+        <button id="prev" aria-label="Предыдущее">‹</button>
+        <button id="next" aria-label="Следующее">›</button>
       </div>
     </div>
-  </section>
-  </main>
+  </div>
+</section>
+
+<section class="section alt">
+  <div class="container">
+    <h3>Отзывы клиентов</h3>
+    <div class="reviews">
+      <article class="review">
+        <p>«Устанавливали кондиционер летом, всё сделали быстро и аккуратно. Теперь дома прохладно и уютно.»</p>
+        <span>— Анна, Москва</span>
+      </article>
+      <article class="review">
+        <p>«Меняли старые окна на пластиковые. Работали чисто, вынесли мусор, стало теплее и тише.»</p>
+        <span>— Сергей, Курчатов</span>
+      </article>
+      <article class="review">
+        <p>«Устанавливали окна и вентиляцию. Всё сделали аккуратно, воздух стал свежим, стало приятнее дышать.»</p>
+        <span>— Мария, Курск</span>
+      </article>
+    </div>
+  </div>
+</section>
+
+<section class="section alt">
+  <div class="container">
+    <h2>Почему важно регулярно обслуживать кондиционер</h2>
+    <p>Регулярная чистка и техническое обслуживание кондиционера продлевает срок службы устройства, снижает расход электроэнергии и улучшает качество воздуха в помещении. Профессиональная промывка теплообменника и дезинфекция внутреннего блока предотвращает появление плесени и неприятных запахов.</p>
+
+    <h3>Когда стоит обратиться в сервис?</h3>
+    <ul>
+      <li>Кондиционер плохо охлаждает</li>
+      <li>Появился запах или шум</li>
+      <li>Кондиционер капает</li>
+      <li>Увеличился расход электроэнергии</li>
+    </ul>
+
+    <p>Мы обслуживаем кондиционеры всех типов: настенные, канальные, кассетные, мобильные и промышленные установки. Используем профессиональное оборудование и безопасные моющие средства.</p>
+  </div>
+</section>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "AirMaster",
+  "description": "Обслуживание и чистка кондиционеров и вентиляции.",
+  "image": "https://example.com/media/hero.png",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Курск"
+  },
+  "telephone": "+79081215397",
+  "priceRange": "₽₽"
+}
+</script>
 
 <footer class="site-footer">
   <div class="container footer-wrap">
@@ -335,6 +392,7 @@
     <p class="copy">© 2025 AirMaster. Все права защищены.</p>
   </div>
 </footer>
+
 <script src="script.js"></script>
 </body>
 </html>
