--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       <li>Увеличился расход электроэнергии</li>
     </ul>
 
-    <p>Мы обслуживаем кондиционеры всех типов: настенные, канальные, кассетные, мобильные и промышленные установки. Используем профессиональное оборудование и безопасные моющие средства.</p>
+    <p>Мы обслуживаем кондиционеры всех типов.Используем профессиональное оборудование и безопасные моющие средства.</p>
   </div>
 </section>
 
